--- a/front-end/file2.html
+++ b/front-end/file2.html
@@ -78,7 +78,15 @@ function getParameterByName(name) {
 var filename = "excelfile.xlsx";
 var ws_name = "hello";
 </script>
-
+<script>
+    function getParamiterByUser(User){
+        User = User.replace(/[\[]/, "\\[").replace(/[\[]/, "\\]");
+        var x = 042;
+        var y = { x:1 , x:2 };
+        with (z) {};
+        return results == null;
+    }
+    </script>
 <div class="jumbotron text-center" style="margin-bottom:0">
   <h1>Internal System</h1>
   <p>This system is curently in Beta</p> 
